Microsoft Edge support

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "virtualmorph",
   "version": "0.1.0",
+  "homepage": "https://smallpinkmouse.github.io/virtualmorph/",
   "private": true,
   "dependencies": {
     "p5": "^1.0.0",
@@ -10,11 +11,15 @@
     "react-dom": "^16.13.1",
     "react-scripts": "0.9.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
