--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.13.1",
     "react-color": "^2.18.0",
     "react-dom": "^16.13.1",
+    "react-onclickoutside": "^6.10.0",
     "react-scripts": "0.9.5"
   },
   "devDependencies": {
